syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

package protocol;
option go_package = "./protocol";

message User {
    int32 Id = 1;
    string Username = 2;
    bool Confirmed = 3;
    string Email = 4;
    string Password = 5;
    google.protobuf.Timestamp CreatedAt = 6;
    google.protobuf.Timestamp UpdatedAt = 7;
}

message DeleteRequest {
    string login = 1;
}

message CreateRequest {
    User user = 1;
}

message UpdateRequest {
    User user = 1;
}

message FindRequest {
    google.protobuf.Any userField = 1;
}

message EmptyUserResponse {
}

service UserService {
    rpc CreateUser (CreateRequest) returns (EmptyUserResponse);
    rpc Delete (DeleteRequest) returns (EmptyUserResponse);
    rpc Update (UpdateRequest) returns (EmptyUserResponse);
    rpc Find (FindRequest) returns (User);

}
